cmake_minimum_required(VERSION 3.31)
project(theme_choser)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build)
add_executable(theme_choser)
target_sources(theme_choser PRIVATE main.cpp)
set_property(TARGET theme_choser PROPERTY CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
install(TARGETS theme_choser DESTINATION /usr/local/bin)
